--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "eslint": "^6.6.0",
     "final-form": "^4.20.1",
     "fontsource-roboto": "^3.0.3",
+    "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.2",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.1.1"
   },
   "scripts": {
